data/all_generated_tests/raw_wast_tests/unreachable_UnreachableCodeExecution_1044.wast
;; 5. **Invalid Stack Instruction Followed by Unreachable:**    - **Description:** Use an invalid stack operation like `i32.add` with no operands followed by an `unreachable` to check for immediate trapping.    - **Constraint:** Verifies stack operation consistency.    - **Relation to Unreachable Code Execution:** Ensures that operand stack operations do not interfere with `unreachable` execution.

(assert_invalid
  (module (func $invalid-stack-operation-followed-by-unreachable
    i32.add (unreachable)
  ))
  "type mismatch"
)